@@ -1,4 +1,8 @@
 
+Slick 7.x-3.0-dev, 2019-03-15
+-----------------------------
+- Added Slick::loadWithFallback(), and minor fixes.
+
 Slick 7.x-3.0-dev, 2019-03-12
 -----------------------------
 - Added back deprecated functions to anticipate potential issues.
